// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <Button /> Test should render default 1`] = `
<button
  className="j-btn j-btn-default"
  onClick={[Function]}
>
  default
</button>
`;

exports[`Component <Button /> Test should render specific type 1`] = `
Array [
  <button
    className="j-btn j-btn-default"
    onClick={[Function]}
  >
    default
  </button>,
  <button
    className="j-btn j-btn-primary"
    onClick={[Function]}
  >
    primary
  </button>,
  <button
    className="j-btn j-btn-danger"
    onClick={[Function]}
  >
    danger
  </button>,
  <button
    className="j-btn j-btn-warning"
    onClick={[Function]}
  >
    warning
  </button>,
]
`;
